# rust_api

./: .env  .gitignore  20230907_seed_users.sql  Cargo.toml  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
migrations/: 20230906_create_users.sql  20230907_create_users.sql  20230907_seed_users.sql
src/: config.rs  db.rs  errors.rs  main.rs  routes.rs
tests/: integration.rs
