[package]
name = "rust_api_template"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
tokio-retry = "0.3"

dotenvy = "0.15"
config = "0.14"